--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
